fixed page cropping glitch on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body{
     font-family: 'Inter', sans-serif;
     overflow-x: clip;
     scroll-behavior: smooth;
+    height:350vh;
     width:100vw;
     margin:0;
     padding:0;
